Partial fix for overflow issue in the header

--- a/style.css
+++ b/style.css
@@ -4205,6 +4205,7 @@ ul.footer-social li {
 
 	.primary-menu-wrapper {
 		display: block;
+		width: 100%;
 	}
 
 	/* HEADER TOGGLES */
